# ecg_monitor

./: .gitignore  .gitmodules  .restyled.yaml  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  dart_dependency_validator.yaml  ffigen_PanTompkinsQRS.yml  flutter_launcher_icons.yaml  pubspec.yaml
.github/: codecov.yml  renovate.json  restyled.yml
.github/actions/: setup-android.yml
.github/workflows/: build-web.yml  build.yml  check.yml  release-please.yml  release.yml  sentry.yml
android/: .gitignore
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/github/ccxxxi/ecg_monitor/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/profile/: AndroidManifest.xml
assets/: model.pt
assets/debug/: 107_leadII_10min.txt  input.txt  output.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: analysis.dart  analytics.dart  constants.dart  database.dart  device.dart  home.dart  home.g.dart  main.dart  main.g.dart  mine.dart  model.dart  monitor.dart  monitor.g.dart
lib/analytics/: analytics.dart  analytics.g.dart  controller.dart  controller.g.dart  data_types.dart  data_types.freezed.dart  label_card.dart  label_card.g.dart  label_details.dart  label_details.g.dart  model.dart  model_stub.dart
lib/device/: bluetooth.dart  bluetooth.g.dart  device.dart  device.g.dart  device_new.dart  device_new.g.dart  fake_device.dart  manager.dart  manager.g.dart
lib/device_manager/: device.dart  device.freezed.dart  device.g.dart  device_manager.dart  device_manager.g.dart  device_new.dart  (+4 more)
linux/: CMakeLists.txt  my_application.cc
test/: constants_test.dart  fake_path_provider.dart  main_test.dart  monitor_test.dart  setup_isar.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+113 files in other folders)
